--- a/public/locales/en/about.json
+++ b/public/locales/en/about.json
@@ -4,7 +4,7 @@
   "aviso": "Performance",
   "video": "Video",
   "presse": "Press",
-  "title": "WELCOME !",
+  "title": "WELCOME",
   "description": "We, circus actors Katerina and Eugeny are happy that you have visited our website! If you want to find out more about our shows, see some photos, and videos, you should visit our Performance page. On page Press you can find articles written about our work. You can contact us by phone +37129627949(Latvia) or email:  .",
   "learnMore": "More...",
   "Aerial ring": "Aerial ring",
