--- a/public/locales/es/about.json
+++ b/public/locales/es/about.json
@@ -4,7 +4,7 @@
   "aviso": "Repertorio",
   "video": "Videos",
   "presse": "De prensa",
-  "title": "BIENVENIDA!!!",
+  "title": "BIENVENIDA",
   "description": "¡Gracias por visitar nuestra web!  Somos dos artistas de circo, Katerina y Eugeni. Si desea saber más acerca de nuestros shows y ver algunas fotos y videos, haga click en la sección sobre nuestras actuaciones Repertorio.  En la sección De prensa puede encontrar artículos escritos sobre nuestro trabajo.    Puede ponerse en contacto con nosotros al teléfono +371 29627949 (Letonia), e-mail ",
   "learnMore": "Más...",
   "Aerial ring": "Aro aéreo",
