--- a/public/locales/ru/about.json
+++ b/public/locales/ru/about.json
@@ -4,7 +4,7 @@
   "aviso": "Репертуар",
   "video": "Видео",
   "presse": "Пресса",
-  "title": "ДОБРО ПОЖАЛОВАТЬ!!!",
+  "title": "ДОБРО ПОЖАЛОВАТЬ",
   "description": "Мы, артисты цирка Катерина и Евгений, рады что вы посетили наш сайт. Заглянув в раздел Репертуар , вы можете подробно узнать о наших номерах, посмотреть фотографии и видео наших выступлений. Узнать,что о нас пишут в разделе Пресса.Связаться с нами можно по электронной почте:  ",
   "learnMore": "Подробнее...",
   "Aerial ring": "Воздушное кольцо",
