--- a/public/locales/lv/about.json
+++ b/public/locales/lv/about.json
@@ -4,7 +4,7 @@
   "aviso": "Repertuārs",
   "video": "Video",
   "presse": "Prese",
-  "title": "Sveicināti!!!",
+  "title": "Sveicināti",
   "description": " Mēs, cirka mākslinieki - Katerīna un Jevgēņijs ir priecīgi, ka Jūs skatāties mūsu mājas lapu. Skatoties sadaļā Repertuārs, Jūs varat detalizēti uzzināt par mūsu priekšnesumiem, apskatīt fotogrāfijas un video, kā arī par mums izlasīt preses publikācijās Preses sadaļā. Sazināties ar mums var pa e-pastu:  ",
   "learnMore": "Sīkāk...",
   "Aerial ring": "Gaisa riņķis",
